--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "axios": "^1.8.4",
     "body-parser": "^1.20.3",
-    "chalk": "^5.4.1",
     "compression": "^1.8.0",
     "cookie-parser": "~1.4.6",
     "csrf-sync": "^4.0.3",
@@ -37,10 +36,7 @@
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "passport-oauth2": "^1.8.0",
-    "simple-oauth2": "^5.1.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "passport-oauth2": "^1.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
